# rag-poc

./: .env.example  .gitignore  27_donem_01_ingestion.json  27_donem_02_ingestion.json  27_donem_03_ingestion.json  27_donem_04_ingestion.json  27_donem_05_ingestion.json  27_donem_06_ingestion.json  CLAUDE.md  README.md  TODOS.md  agent.md  app.py  chat.py  models.yaml  ornek_ingestion.json  ornek_ingestion2.json  ornek_onerge_manifest.json  ornek_tutanak.json  pipeline.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  retrieval_config.yaml  scratch.py  setup_env.sh
devtools/: README.md  analyze_packer.py  analyze_sessions.py  clear_collection.py
docs/: ARCHITECTURE.md  FLOWCHARTS.md  PRESENTATION.md  SCALING_PLAN.md  mcp_architecture.md  phase3_ingestion_plan.md  phase4_query_expansion_plan.md
experiments/: jina_v3_vs_nomic.yaml  onerge_comparison.yaml  tbmm27001001_eval.yaml  tutanaklar_golden_comparison.yaml
scripts/: README.md  bench_embedding_context.py  chat.py  compare_ocr.py  evaluate.py  generate_excerpts.py  generate_golden.py  golden_builder.html  golden_builder.py  lint_golden.py  parse_minutes_urls.py  probe_hybrid_chunker.py  reindex_all.py  run_benchmark.py  try_docling.py  vector_explorer.py
slides/: presentation.html
tests/: test_agent_bad_words_filter.py  test_agent_classifier.py  test_agent_planner.py  test_agent_planner_gates.py  test_agent_sanitizer.py  test_agent_schemas.py  test_agent_suggester.py  test_agent_tools.py  test_agent_tracer.py  test_allocator.py  test_assembler.py  test_author_extractor.py  test_benchmark_page.py  (+52 more)
(+118 files in other folders)
